comment out "global shortcuts"

--- a/src/server/views/modal/shortcuts.html
+++ b/src/server/views/modal/shortcuts.html
@@ -13,7 +13,7 @@
           <div class="col-lg-6">
             <h3><strong>{{ t('modal_shortcuts.global.title') }}</strong></h3>
 
-            <table class="table">
+            <!-- <table class="table">
               <tr>
                 <th>{{ t('modal_shortcuts.global.Open/Close shortcut help') }}:</th>
                 <td><span class="key cmd-key"></span> + <span class="key">/</span></td>
@@ -37,7 +37,7 @@
                   <span class="key key-small">B</span>&nbsp;<span class="key key-small">A</span>
                 </td>
               </tr>
-            </table>
+            </table> -->
           </div><!-- /.col-lg-6 -->
 
           <div class="col-lg-6">
