--- a/src/server/views/modal/shortcuts.html
+++ b/src/server/views/modal/shortcuts.html
@@ -13,6 +13,17 @@
           <div class="col-lg-6">
             <h3><strong>{{ t('modal_shortcuts.global.title') }}</strong></h3>
 
+            <div class="d-table">
+              <div class="d-table-row">
+                <p class="d-table-cell p-2 bg-primary text-white">d-table</p>
+                <p class="d-table-cell p-2 bg-dark text-white">d-table</p>
+              </div>
+              <div class="d-table-row">
+                <p class="d-table-cell p-2 bg-primary text-white">d-table</p>
+                <p class="d-table-cell p-2 bg-dark text-white">d-table</p>
+              </div>
+            </div>
+
             <!-- <table class="table">
               <tr>
                 <th>{{ t('modal_shortcuts.global.Open/Close shortcut help') }}:</th>
