add other keys in global shortcus

--- a/src/server/views/modal/shortcuts.html
+++ b/src/server/views/modal/shortcuts.html
@@ -35,11 +35,24 @@
             <!-- grid layout -->
             <div class="container">
               <div class="row">
-                <div class="col-lg-6">1列目</div>
-                <div class="col-lg-6">2列目</div>
+                <div class="col-lg-6">{{ t('modal_shortcuts.global.Open/Close shortcut help') }}:</div>
+                <div class="col-lg-6"><span class="key cmd-key"></span> + <span class="key">/</span></div>
                 <div class="w-100"></div>
-                <div class="col-lg-6">3列目</div>
-                <div class="col-lg-6">4列目</div>
+                <div class="col-lg-6">{{ t('modal_shortcuts.global.Create Page') }}:</div>
+                <div class="col-lg-6"><span class="key">C</span></div>
+                <div class="w-100"></div>
+                <div class="col-lg-6">{{ t('modal_shortcuts.global.Edit Page') }}:</div>
+                <div class="col-lg-6"><span class="key">E</span></div>
+
+                <div class="w-100"></div>
+
+                <div class="col-lg-6">{{ t('modal_shortcuts.global.Show Contributors') }}:</div>
+                <div class="col-lg-6"><a href="{{ t('modal_shortcuts.global.konami_code_url') }}" target="_blank">{{ t('modal_shortcuts.global.Konami Code') }}</a><br>
+                  <span class="key key-small">↑</span>&nbsp;<span class="key key-small">↑</span>
+                  <span class="key key-small">↓</span>&nbsp;<span class="key key-small">↓</span>
+                  <span class="key key-small">←</span>&nbsp;<span class="key key-small">→</span>
+                  <span class="key key-small">←</span>&nbsp;<span class="key key-small">→</span>
+                  <span class="key key-small">B</span>&nbsp;<span class="key key-small">A</span></div>
               </div>
             </div>
 
